# convexity

./: README.md  export.py  pyproject.toml
convexity/: level.py  project.py
convexity/common/: buckets.py  effect.py  init.py  lane.py  layout.py  note.py  options.py  particle.py  skin.py  stage.py  streams.py  ui.py
convexity/convert/: bestdori.py  osu.py  sonolus_bandori.py  sonolus_llsif.py  sonolus_nanaon.py  utils.py
convexity/play/: bpm.py  config.py  init.py  input_manager.py  lane.py  mode.py  note.py  stage.py  timescale.py
convexity/preview/: bar.py  init.py  lane.py  layout.py  mode.py  note.py  stage.py
convexity/tutorial/: init.py  instructions.py  mode.py  navigate.py  note.py  phases.py  stage.py  update.py
convexity/watch/: bpm.py  init.py  lane.py  mode.py  note.py  stage.py  task.py  timescale.py
mania/: level.py  project.py
mania/common/: buckets.py  effect.py  init.py  lane.py  layout.py  note.py  options.py  particle.py  skin.py  stage.py
mania/convert/: bestdori.py  osu.py  sonolus_llsif.py  utils.py
mania/play/: config.py  init.py  input_manager.py  lane.py  mode.py  note.py  stage.py  timescale.py  timescale_change.py  timescale_group.py
mania/preview/: mode.py
mania/tutorial/: mode.py
mania/watch/: init.py  lane.py  mode.py  note.py  stage.py  timescale.py  update_spawn.py
