[project]
name = "Mania"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sonolus.py~=0.6.0"
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
preview = true
select = ["F", "E", "W", "I", "N", "D", "UP", "YTT", "B", "A", "COM", "C4", "DTZ", "PIE", "PT", "Q", "SLOT", "SIM", "PTH", "PL", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E402", "D1", "COM812", "PLW2901", "PLW3201", "PLR6301", "PLC0415", "PLR2004", "PLR09", "SIM108", "FURB113", "A005", "PLR1714", "E741"]

[tool.ruff.lint.pydocstyle]
convention = "google"
